--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -164,6 +164,8 @@
 </ng-template>
 
 <ng-template #actions>
-	<ss-lib-button [text]="'Ок'"></ss-lib-button>
-	<ss-lib-button [text]="'Не ок'"></ss-lib-button>
+	<div class="test-modal__actions">
+		<ss-lib-button [text]="'Ок'"></ss-lib-button>
+		<ss-lib-button [text]="'Не ок'"></ss-lib-button>
+	</div>
 </ng-template>
