--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -2048,18 +2048,18 @@
 			<div class="component-row">
 				<ss-lib-button
 					[type]="ButtonType.Primary"
-					[text]="'Модалка - side-page без overlay'"
+					[text]="'Модалка - side-page c footer'"
 					(click)="openRightSidebar(true, true)"
 				></ss-lib-button>
 				<ss-lib-button
 					[type]="ButtonType.Primary"
 					[text]="'Модалка - side-page c backdrop'"
-					(click)="openRightSidebar(false, true)"
+					(click)="openRightSidebar(true, true)"
 				></ss-lib-button>
 				<ss-lib-button
 					[type]="ButtonType.Primary"
 					[text]="'Модалка - side-page без overlay'"
-					(click)="openRightSidebar(true, true)"
+					(click)="openRightSidebar(false, true)"
 				></ss-lib-button>
 				<ss-lib-button
 					[type]="ButtonType.Primary"
