feature/add-navigation: create separate components

--- a/projects/test-app/src/app/layout/layout.component.html
+++ b/projects/test-app/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <ss-lib-canvas
 	[leftMenuHeaderTemplateRef]="leftMenuHeaderTemplateRef"
 	[rightMenuHeaderTemplateRef]="rightMenuHeaderTemplateRef"
-	[menu]="exampleMenu"
+	[menu]="MENU"
 	(outMenuFromCanvas)="selectedMenu($event)"
 >
 	<router-outlet></router-outlet>
