feature/4648_4698: add ss-lib-files-upload

--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
@@ -13,6 +13,7 @@
 	border-style: dashed;
 	box-sizing: border-box;
 	text-align: center;
+	padding: 14px 22px;
 
 	&__hover {
 		border-color: var(--border-focus);
