--- a/projects/front-components/src/lib/components/files-upload/files-upload.component.html
+++ b/projects/front-components/src/lib/components/files-upload/files-upload.component.html
@@ -1,7 +1,7 @@
 <div
 	class="multi-file-upload"
 	[class.multi-file-upload__hover]="hover()"
-	[class.multi-file-upload__disabled]="disabled()"
+	[class.multi-file-upload__disabled]="isDisabled()"
 	(dragenter)="onDragEnter($event)"
 	(dragleave)="onDragLeave($event)"
 	(drop)="onDropSuccess($event)"
@@ -38,7 +38,7 @@
 			multiple
 			aria-label="Загрузить файлы с устройства"
 			[accept]="allowedFormatsList()"
-			[disabled]="disabled() || canAddMoreFiles()"
+			[disabled]="isDisabled()"
 			(change)="onFileSelect(fileInput.files)"
 		/>
 
@@ -47,7 +47,7 @@
 			[text]="'Загрузить с устройства'"
 			[icon]="IconType.Upload"
 			[size]="ExtraSize.md"
-			[disabled]="disabled() || canAddMoreFiles()"
+			[disabled]="isDisabled()"
 			(click)="hiddenInput.click()"
 		></ss-lib-button>
 	</label>
