--- a/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
+++ b/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
@@ -4,6 +4,7 @@
 			[title]="titleHeader()"
 			[description]="descriptionHeader()"
 			[badge]="badgeProps()"
+			[tags]="tags()"
 			(closeEvent)="onCloseEvent()"
 		></ss-lib-dialog-header>
 	</div>
