--- a/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.scss
+++ b/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.scss
@@ -12,6 +12,8 @@
 		flex-direction: column;
 		flex-grow: 1;
 		padding: 20px 24px 32px 24px;
+		height: 100%;
+		overflow-y: auto;
 	}
 
 	&__footer {
