feature/4786: add custom colors to tags

--- a/projects/front-components/src/lib/components/dialog-header/dialog-header.component.html
+++ b/projects/front-components/src/lib/components/dialog-header/dialog-header.component.html
@@ -30,7 +30,7 @@
 						<ss-lib-tag
 							[type]="tag.type"
 							[text]="tag.text"
-							[dotColor]="tag.dotColor"
+							[colorConfig]="tag.colorConfig!"
 						/>
 					}
 				</div>
