--- a/projects/front-components/src/lib/components/tag/tag.component.scss
+++ b/projects/front-components/src/lib/components/tag/tag.component.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	flex-shrink: 0;
 	padding: 2px 8px;
-	outline: 1px solid var(--border-primary);
+	outline: 1px solid;
 	outline-offset: -1px;
 
 	&.type-default {
